fixed my broken styles

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,9 @@ body {
 }
 
 .content-container {
+  flex-grow: 1;
+  padding-top: 10vh;
+  width: 100%;
   display: flex;
   flex: 1 1 auto;
   padding-top: 10vh;
@@ -21,21 +24,53 @@ h1 {
   margin-top: 0;
 }
 
+h2 {
+  font-size: 1.5vw;
+}
+
+
 h4 {
   color: #999;
   font-weight: bold;
   text-transform: uppercase;
 }
 
-a {
-  color: #f00;
-}
 h2 ~ p {
   font-size: 0.8em;
   font-style: italic;
   margin: 1em auto 0;
   max-width: 70%;
   text-align: center;
+}
+
+a {
+  color: #6397b5;
+}
+
+p{
+  line-height: 1.5;
+  margin: 0.75em 0;
+}
+
+/* PAGE STYLES */
+
+.page {
+  margin: 10vh auto 15vh;
+  max-width: 980px;
+  width: 85vw;
+}
+
+.page h1 {
+  font-size: 3em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+.page h2 {
+  margin-bottom: 0.5em;
+}
+
+.page h4 {
+  margin-bottom: 1em;
 }
 
 /* HOMEPAGE STYLES */
@@ -64,6 +99,11 @@ h2 ~ p {
   font-size: 0.8rem;
   padding: 0 3vw;
 }
+.home-section {
+  margin: 6rem auto;
+  max-width: 980px;
+  width: 90vw;
+}
 .home-section h2 {
   margin-bottom: 1.5rem;
   text-align: center;
@@ -79,6 +119,7 @@ h2 ~ p {
   margin: auto;
   width: 75%;
 }
+
 /* HEADER STYLES */
 .header {
   background-color: #000;
@@ -108,6 +149,7 @@ h2 ~ p {
 .header-nav {
   float: right;
   padding: 5.5vh 60px 0 0;
+
 }
 .header-nav > li {
   display: inline-block;
@@ -120,16 +162,19 @@ h2 ~ p {
 .header-nav a {
   color: #fff;
 }
+
 .nav-links a {
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
 }
+
 .nav-links a:hover,
 .nav-links a:active  {
   color: #ed6e2f;
 }
+
 .header-nav > li:first-child a {
   color: #ed6e2f;
 }
@@ -166,12 +211,11 @@ h2 ~ p {
 .col-two {
   display: flex;
 }
-
 .col-two .col-aside {
   flex: 0 0 20em;
   order: 1;
+  flex-direction: column;
 }
-
 .col-two .col-content {
   flex: 1;
 }
@@ -195,30 +239,19 @@ h2 ~ p {
 }
 
 .col-three .col-content {
-  flex: 1 1 0;
+  flex: 1;
 }
 
 .col-three .col-aside {
   flex: 0 1 20em;
 }
 
-/*PAGE STYLES */
+/* PAGE STYLES */
 .page {
   margin: 10vh auto 15vh;
   max-width: 980px;
-  width: 85vh;
-}
+  width: 86vw;
 
-.page h1 {
-  font-size: 3em;
-  margin-bottom: 1em;
-  text-align: center;
-}
-.page h2 {
-  margin-bottom: 0.5em;
-}
-.page h4 {
-  margin-bottom: 1em;
 }
 
 /* HERO STYLES */
@@ -228,6 +261,17 @@ h2 ~ p {
   box-sizing: border-box;
   height: 90vh;
   padding-top: 10vh;
+}
+.full-hero:after {
+  bottom: 2vh;
+  border: 10px solid;
+  border-color: #fff transparent transparent;
+  content: "";
+  height: 0;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 0);
+  width: 0;
 }
 
 .hero-home {
@@ -298,29 +342,30 @@ h2 ~ p {
   overflow: hidden;
 }
 .bio-box {
-  border: 1px solid black;
   box-sizing: border-box;
   float: left;
   font-size: 1rem;
-  margin: 40px 1% 0;
-  padding: 2%;
-  width: 23%;
+  margin: 6rem 0 0;
+  padding: 0 3%;
+  width: 33%;
 }
 .bio-box h3 {
   color: #fff;
   font-size: 1.5em;
   margin: -40px 0 1em;
   text-align: center;
+  text-transform: uppercase;
 }
 .bio-box img {
   width: 100%;
 }
 .bio-box .social-link {
   display: block;
-  margin: 2em 0 1em;
+  margin: 2em auto 1em;
 }
 .bio-copy {
-  font-size: 1em;
+  font-size: 0.75em;
+
 }
 .bio-copy a {
   color: green;
@@ -351,6 +396,9 @@ h2 ~ p {
 .gallery-thumbs .current{
     cursor: default;
 }
+.gallery-thumbs img:hover {
+  opacity: 0.5;
+}
 
 .gallery-thumbs .current img {
   box-shadow: 0 0 0 5px #ed6e2f;
@@ -371,45 +419,7 @@ h2 ~ p {
   margin-bottom: 1em;
 }
 
-/* BLOG STYLES */
-.post {
-  width: 100%;
-}
-.post-content,
-.post-footer {
-  margin: auto;
-  max-width: 40em;
-  width: 85vw;
-}
-.pull-left {
-  float: left;
-  margin: 2em 2em 2em -2%;
-}
-.pull-right {
-  float: right;
-  margin: 2em -2% 2em 2em
-}
-.post-aside {
-  background-color: rgba(0, 0, 0, 0.01);
-  float: right;
-  margin: 0 0 2em 2em;
-  padding: 2em;
-}
-.post .post-header {
-  margin-bottom: 2.5em;
-  text-align: center;
-}
-.post-content {
-  font-size: 1.1rem;
-}
-.post-footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  font-style: italic;
-  font-size: 0.8em;
-  margin-top: 3em;
-  padding-top: 2em;
-}
-
+/*BLOG STYLES*/
 .blog-recent {
   text-align: right;
 }
@@ -435,8 +445,48 @@ h2 ~ p {
 .blog-posts .post-header {
   font-size: 0.8rem;
 }
+
 .post-header {
   margin-bottom: 1.5em;
+}
+
+.post {
+  width: 100%;
+}
+.post-content,
+.post-footer {
+  margin: auto;
+  max-width: 40em;
+  width: 85vw;
+}
+
+.pull-left {
+  float: left;
+  margin: 2em 2em 2em -2%;
+}
+.pull-right {
+  float: right;
+  margin: 2em -2% 2em 2em;
+}
+.post-aside {
+  background-color: rgba(0, 0, 0, 0.01);
+  float: right;
+  margin: 0 0 2em 2em;
+  padding: 2em;
+}
+.post .post-header {
+  margin-bottom: 2.5em;
+  text-align: center;
+}
+.post-content {
+  font-size: 1.1rem;
+}
+.post-footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  font-style: italic;
+  font-size: 0.8em;
+  margin-top: 3em;
+  padding-top: 2em;
 }
 .post-header img,
 .post-header .social-link {
@@ -453,4 +503,11 @@ h2 ~ p {
   background-size: cover;
   height: 6em;
   margin-bottom: 1.5em;
+}
+
+@media (max-width: 800px) {
+  html {
+    box-shadow: none;
+    padding: 0;
+    }
 }
